--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,8 +55,9 @@ steps:
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
-    script: $(Build.SourcesDirectory)\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta --releasify ..\GrandadAudioPlayer.$(version).nupkg
-    workingDirectory: $(Build.SourcesDirectory)\GrandadAudioPlayer
+    script: |
+      Write-Ouput "Command: '$env:BUILD_SOURCESDIRECTORY\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta --releasify $env:BUILD_SOURCESDIRECTORY\GrandadAudioPlayer\GrandadAudioPlayer.$env:VERSION.nupkg'"
+      $env:BUILD_SOURCESDIRECTORY\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta --releasify $env:BUILD_SOURCESDIRECTORY\GrandadAudioPlayer\GrandadAudioPlayer.$env:VERSION.nupkg
     failOnStderr: true
     
 # - powershell: $(Build.SourcesDirectory)\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta --releasify ..\GrandadAudioPlayer.$(version).nupkg
