Abouit to loose the will to live

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,8 +56,8 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      Write-Ouput "Command: '$env:BUILD_SOURCESDIRECTORY\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta --releasify $env:BUILD_SOURCESDIRECTORY\GrandadAudioPlayer\GrandadAudioPlayer.$env:VERSION.nupkg'"
-      $env:BUILD_SOURCESDIRECTORY\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta --releasify $env:BUILD_SOURCESDIRECTORY\GrandadAudioPlayer\GrandadAudioPlayer.$env:VERSION.nupkg
+      Write-Ouput "Command: ${env:BUILD_SOURCESDIRECTORY}\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta --releasify ${env:BUILD_SOURCESDIRECTORY}\GrandadAudioPlayer\GrandadAudioPlayer.${env:VERSION}.nupkg"
+      ${env:BUILD_SOURCESDIRECTORY}\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta --releasify ${env:BUILD_SOURCESDIRECTORY}\GrandadAudioPlayer\GrandadAudioPlayer.${env:VERSION}.nupkg
     failOnStderr: true
     
 # - powershell: $(Build.SourcesDirectory)\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta --releasify ..\GrandadAudioPlayer.$(version).nupkg
