--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,12 +58,10 @@ steps:
   workingDirectory: $(Build.SourcesDirectory)\GrandadAudioPlayer
   displayName: "Create the nupkg for the Squirrelisation process"
 
-- powershell: |
-    Write-Output "Attempting to build squirrel release from nupkg file: .\GrandadAudioPlayer.$(version).nupkg"
-    $(Build.SourcesDirectory)\packages\squirrel.windows.1.9.0\tools\Squirrel.exe --nomsi --nodelta -r ..\Releases --releasify .\GrandadAudioPlayer.$(version).nupkg
-    tree /f
-  workingDirectory: $(Build.SourcesDirectory)\GrandadAudioPlayer
-  displayName: "Build squirrel packages"
+- task: PowerShell@2
+  inputs:
+    filePath: RunSquirrel.ps1
+  displayName: "Generate Squirrel Files"
 
 - powershell: Start-Sleep -s 300
   displayName: "Sleep to allow the squirrel process to complete"
