--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AudioSwitcher.AudioApi" version="3.0.0" targetFramework="net461" />
+  <package id="AudioSwitcher.AudioApi.CoreAudio" version="3.0.0.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
   <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.1" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net461" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net461" />
+  <package id="NAudio" version="1.8.5" targetFramework="net461" />
+  <package id="NAudio.Wma" version="1.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Prism.Core" version="7.1.0.431" targetFramework="net461" />
   <package id="Prism.Unity" version="7.1.0.431" targetFramework="net461" />
@@ -18,6 +22,7 @@
   <package id="squirrel.windows" version="1.9.0" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
+  <package id="taglib" version="2.1.0.0" targetFramework="net461" />
   <package id="Unity" version="5.8.13" targetFramework="net461" />
   <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
   <package id="Unity.Container" version="5.8.13" targetFramework="net461" />
