--- a/GrandadAudioPlayer/packages.config
+++ b/GrandadAudioPlayer/packages.config
@@ -7,6 +7,8 @@
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.1" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net461" />
+  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net461" />
+  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net461" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net461" />
   <package id="NAudio" version="1.8.5" targetFramework="net461" />
   <package id="NAudio.Wma" version="1.0.1" targetFramework="net461" />
